--- a/src/main/resources/templates/listEvents.html
+++ b/src/main/resources/templates/listEvents.html
@@ -1,50 +1,63 @@
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Event Booking page - Welcome and choose an Event</title>
-    <style type="text/css">
-        body {
-            width: 800px;
-            margin: auto;
-        }
-    </style>
-</head>
-<body>
-<header>
-    <h1>Welcome to our Event Booking App</h1>
-</header>
-<main>
+<div xmlns:th="http://www.thymeleaf.org">
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">WEB PROGRAMMING SHOP</h1>
+            <h3 class="jumbotron-heading">All events</h3>
+        </div>
+    </section>
 
-    <form method="post" action="/">
+    <div class="container mb-4">
+        <div class="row">
+            <div class="col-12" th:if="${events.size() > 0}">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">Event name</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Popularity Score</th>
+                            <th scope="col">Location</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="event : ${events}" class="event">
+                            <td th:text="${event.getName()}"></td>
+                            <td th:text="${event.getDescription()}"></td>
+                            <td th:text="${event.getPopularityScore()}"></td>
+                            <td th:text="${event.getLocation() != null}
+                            ? ${event.getLocation().getName()} : 'No Location'"></td>
+                            <td class="text-right">
+                                <th:block>
+                                    <form th:action="@{'/events/delete/{id}' (id=${event.getId()})}"
+                                          th:method="DELETE">
+                                        <button type="submit"
+                                                class="btn btn-sm btn-danger delete-event">
+                                            <i class="fa fa-trash">Delete</i>
+                                        </button>
+                                    </form>
+                                </th:block>
+                                <th:block>
+                                    <a th:href="@{'/events/edit/{eventId}' (id=${event.getId()})}"
+                                       class="btn btn-sm btn-info edit-event">
+                                        <i class="fa fa-trash">Edit</i>
+                                    </a>
+                                </th:block>
 
-        <label for="text" class="sr-only">Search text</label>
-        <input type="text" id="text" name="text" class="form-control" placeholder="text" required=""
-               autofocus="">
-
-        <label for="score" class="sr-only">Score</label>
-        <input type="number" id="score" name="score" class="form-control" placeholder="Score" required=""
-               autofocus="">
-
-        <button id="submit" class="btn btn-lg btn-primary btn-block" type="submit">Search</button>
-
-    </form>
-
-    <h2>Choose an event:</h2>
-    <!-- Display radio buttons for each event,
-            the value should be the event name
-            and the displayed text should be Name: <event_name>, Description: <event_description>, Rating: <popularity_score> -->
-
-    <ul>
-        <li style="list-style: none;" th:each="event: ${events}">
-            <input type="radio" th:value="${event.name}" th:text="'Name: '+${event.name} + ', Description: ' + ${event.description} + ', Rating:'+ ${event.popularityScore}">
-        </li>
-    </ul>
-    <h2>Choose number of tickets:</h2>
-    <form th:action="@{/servlet/eventBooking}">
-        <input type="number" name="numTickets" min="1" max="10"><br/>
-        <br/>
-        <input type="submit" value="Submit">
-    </form>
-</main>
-</body>
-</html>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <div class="row">
+                    <div class="col-sm-12 col-md-12">
+                        <a href="/events/add" class="btn btn-block btn-dark add-event-btn">
+                            Add new event
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
