--- a/src/main/resources/templates/add-event.html
+++ b/src/main/resources/templates/add-event.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="form-group">
                         <label for="popularityScore">Popularity Score</label>
-                        <input type="text"
+                        <input type="number"
                                class="form-control"
                                id="popularityScore"
                                name="popularityScore"
