--- a/src/main/resources/templates/listEvents.html
+++ b/src/main/resources/templates/listEvents.html
@@ -17,6 +17,7 @@
                             <th scope="col">Description</th>
                             <th scope="col">Popularity Score</th>
                             <th scope="col">Location</th>
+                            <th scope="col">Category</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -26,6 +27,8 @@
                             <td th:text="${event.getPopularityScore()}"></td>
                             <td th:text="${event.getLocation() != null}
                             ? ${event.getLocation().getName()} : 'No Location'"></td>
+                            <td th:text="${event.getCategory() != null}
+                            ? ${event.getCategory().getName()} : 'No category'"></td>
                             <td class="text-right">
                                 <th:block>
                                     <form th:action="@{'/events/delete/{id}' (id=${event.getId()})}"
@@ -64,6 +67,15 @@
                     <div class="col-sm-12 col-md-12">
                         <a href="events/add-form" class="btn btn-block btn-dark add-event-btn">
                             Add new event
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <div class="row">
+                    <div class="col-sm-12 col-md-12">
+                        <a href="events/add-category" class="btn btn-block btn-dark add-event-btn">
+                            Add new Category
                         </a>
                     </div>
                 </div>
