--- a/src/main/resources/templates/add-category.html
+++ b/src/main/resources/templates/add-category.html
@@ -31,7 +31,7 @@
                     <input id="id" type="hidden" name="id"
                            th:value="(${category} != null ? ${category.getId()} : '')">
                     <div class="form-group">
-                        <label for="name">Event name</label>
+                        <label for="name">Category name</label>
                         <input type="text"
                                class="form-control"
                                id="name"
