--- a/src/main/resources/templates/add-category.html
+++ b/src/main/resources/templates/add-category.html
@@ -38,7 +38,7 @@
                                name="name"
                                th:value="(${category} != null ? ${category.getName()} : '')"
                                required
-                               placeholder="Enter event name">
+                               placeholder="Enter Category name">
                     </div>
 
                     <button id="submit" type="submit" class="btn btn-primary">Submit</button>
